--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "Yifan Yuan"
-  avatar           : "images/测试.png"
+  avatar           : "images/human.png"
   bio              : "Lorem ipsum College"
   location         : "Beijing, China"
   employer         :
