--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ author:
   googlescholar    : "https://scholar.google.com/citations?user=YOUR_GOOGLE_SCHOLAR_ID"
   email            : "Lorem@ipsum.com"
   researchgate     :  # e.g., "https://www.researchgate.net/profile/yourprofile"
-  uri              :
+  uri              : https://acrossdanger.github.io/YifanYuan.github.io/
   bitbucket        :
   codepen          :
   dribbble         :
